# myshop

./: .gitignore  README.md  pyproject.toml
cart/: cart.py  forms.py  urls.py  views.py
cart/templates/cart/: detail.html
config/: celery.py  settings.py  urls.py
coupons/: models.py  urls.py  views.py
coupons/migrations/: 0001_initial.py  0002_alter_coupon_options.py
locale/en/LC_MESSAGES/: django.po
locale/ru/LC_MESSAGES/: django.po
orders/: admin.py  models.py  tasks.py  urls.py  views.py
orders/locale/en/LC_MESSAGES/: django.po
orders/locale/ru/LC_MESSAGES/: django.po
orders/migrations/: 0001_initial.py  0002_alter_order_address_alter_order_city_and_more.py  0003_order_stripe_id.py  0004_order_coupon_order_discount.py  0005_alter_order_email.py
orders/templates/orders/order/: create.html  created.html  pdf.html
payment/: tasks.py  urls.py  views.py  webhooks.py
payment/templates/payment/: canceled.html  completed.html  process.html
shop/: admin.py  models.py  recommender.py  urls.py  views.py
shop/migrations/: 0001_initial.py  0002_translations.py
shop/static/css/: base.css
shop/templates/shop/: base.html
shop/templates/shop/product/: detail.html  list.html
shop/templatetags/: shop_tags.py
users/: forms.py  urls.py  views.py
users/templates/registration/: login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html
users/templates/users/: register.html  register_done.html
(+1 files in other folders)
