[tool.poetry]
name = "myshop"
version = "0.1.0"
description = ""
authors = ["Dontgoingforyou <mishael000@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"
pillow = "^11.0.0"
python-decouple = "^3.8"
psycopg2-binary = "^2.9.10"
celery = "^5.4.0"
flower = "^2.0.1"
stripe = "^11.2.0"
weasyprint = "^61.2"
cairocffi = "1.6.0"
pydyf = "0.10.0"
tinycss2 = "1.2.0"
cssselect2 = "0.6.0"
redis = "^5.2.0"
django-rosetta = "^0.10.1"
django-parler = "^2.3"
django-extensions = "^3.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
